// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationPrompt Snapshots should render with children 1`] = `
<ContextProvider
  value={
    Object {
      "deregisterPrompt": [Function],
      "registerPrompt": [Function],
    }
  }
>
  <withPromptRegistration(MockPromptBase) />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render with minimal props 1`] = `
<ContextProvider
  value={
    Object {
      "deregisterPrompt": [Function],
      "registerPrompt": [Function],
    }
  }
/>
`;

exports[`NavigationPrompt Snapshots should render with minimal props 2`] = `
<ContextProvider
  value={
    Object {
      "deregisterPrompt": [Function],
      "registerPrompt": [Function],
    }
  }
>
  <NotificationDialog
    isOpen={true}
    message="Test Message"
    primaryAction={
      Object {
        "onClick": [Function],
        "text": "Reject",
      }
    }
    secondaryAction={
      Object {
        "onClick": [Function],
        "text": "Accept",
      }
    }
    title="Test Title"
    variant="warning"
  />
</ContextProvider>
`;
